# axionax-core

./: .gitignore  ARCHITECTURE.html  AXX_Upgrade_v1.6.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  GOVERNANCE.md  INTEGRATION_COMPLETE.md  LICENSE  LICENSE_NOTICE.md  Makefile  QUICKSTART.html  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  ROADMAP.md  SECURITY.md  SECURITY_COMPLETE.md  SECURITY_IMPLEMENTATION.md  STATUS.md  TESTING_GUIDE.md  TOKENOMICS.md  benchmark_results.json  config.example.yaml  config.rpc.example.toml  coverage.out  docker-compose.yaml  go.mod  go.sum  verify_index_page.py
.github/: workflpages
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  pages.yml  security.yml
Axionax_v1.5_Testnet_in_a_Box/: README.md
Axionax_v1.5_Testnet_in_a_Box/docs/: PUBLIC_DEPLOYMENT.md  SESSION_PROGRESS.md
Axionax_v1.5_Testnet_in_a_Box/reverse-proxy/: nginx.conf.bak
Axionax_v1.5_Testnet_in_a_Box/scripts/: gen_domain_certs.ps1
Axionax_v1.6_Testnet_in_a_Box/: Dockerfile  README.md
Axionax_v1.6_Testnet_in_a_Box/ui/: index.html
bridge/rust-python/: Cargo.toml
cmd/axionax/: Cargo.toml  main.go
core/blockchain/: Cargo.toml
core/crypto/: Cargo.toml  USAGE.md
core/network/: Cargo.toml  (+1 more)
deai/: README.md  asr.py  fraud_detection.py  requirements.txt
docs/: API_REFERENCE.html  ARCHITECTURE.html  BUILD.html  NODE_INTEGRATION.html  QUICKSTART.html  STATE_RPC_USAGE.html  TESTNET_INTEGRATION.html  index.html
scripts/: INSTALLATION.md  README.md
sdk/: package.json
tests/: integration_simple.py  integration_test.py
(+48 files in other folders)
