[workspace]
members = [
    "core/consensus",
    "core/blockchain",
    "core/state",
    "core/network",
    "core/crypto",
    "core/rpc",
    "core/node",
    "bridge/rust-python",
    "cmd/axionax",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Axionax Protocol <team@axionax.org>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/axionaxprotocol/axionax-core"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parity-scale-codec = { version = "3.6", features = ["derive"] }

# Cryptography
ed25519-dalek = "2.1"
sha3 = "0.10"
blake2 = "0.10"
rand = "0.8"
hex = "0.4"

# Database
rocksdb = "0.22"
sled = "0.34"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
criterion = "0.5"

# Python Bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
